2006-05-26 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, update.rb: return status 500 on error. thanks Masahiro Sakai.

2006-05-24  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/style/etdiary/etdiary_style.rb: remove debug code.

2006-05-13 TADA Tadashi <sho@spc.gr.jp>
	* plugin/50sp.rb: add tDiary path before 'misc/plugin' in sp.path. thenks
	KURODA Hiraku.
	* tdiary.rb: fix bug about counting TrackBack. thanks Masahiro YOSHIZAWA.

2006-04-15 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.4 at dotBAR.

2006-03-23 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: delete white spaces in anchor of date.
	thanks cherry.usacho.jp.

2006-03-21 FUDAN <joker at comel.or.jp>
	* tdiary.conf: add "WILLCOM" to mobile agent.

2006-03-19 TADA Tadashi <sho@spc.gr.jp>
	* skel/show.rhtml, skel/i.show.rhtml: delete contents because these are
	dummy. thenks ZnZ.

2006-03-18 TADA Tadashi <sho@spc.gr.jp>
	* remove a limit of TSUKKOMI max (more).
	* plugin/00default.rb: add Mobile Link Discovery to HTML header.

2006-03-17 TADA Tadashi <sho@spc.gr.jp>
	* remove a limit of TSUKKOMI max.
	* move TSUKKOMI form from skel to plugin.

2006-02-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/default_io.rb: revive safety global lock.
	+ plugin/05referer.rb: change labels.

2006-02-06 TADA Tadashi <sho@spc.gr.jp>
	* revive @referer_day_only option but reverse default value.

2006-02-04 TADA Tadashi <sho@spc.gr.jp>
	* 01referer.rb: check existence of @referer_volatile in
	referer_of_today_long.
	* 01referer.rb: delete implement of referer_of_today_short.
	* theme/base.css: add p.message.

2006-02-03 TADA Tadashi <sho@spc.gr.jp>
	* large change about referer: daily management, volatile link, etc.
	* default_io.rb: ignore error when *.tdc was empty.

2006-01-02 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/defaultio.rb: ignore Errno::NOENT when delete empty file.

2005-12-09  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/convert2.rb: revise for current tdiary.rb.

2005-10-23 SHIBATA Hiroshi <h-sbt@nifty.com>