@@ -1,6 +1,6 @@
 #!/usr/bin/env ruby
 #
-# index.rb $Revision: 1.31 $
+# index.rb $Revision: 1.32 $
 #
 # Copyright (C) 2001-2003, TADA Tadashi <sho@spc.gr.jp>
 # You can redistribute it and/or modify it under GPL2.
@@ -102,11 +102,7 @@ begin
 	end
 rescue Exception
 	if @cgi then
-		if /MSIE/ =~ @cgi.user_agent then
-			print @cgi.header( 'type' => 'text/html' )
-		else
-			print @cgi.header( 'status' => '500 Internal Server Error', 'type' => 'text/html' )
-		end
+		print @cgi.header( 'status' => '500 Internal Server Error', 'type' => 'text/html' )
 	else
 		print "Status: 500 Internal Server Error\n"
 		print "Content-Type: text/html\n\n"
@@ -117,5 +113,6 @@ rescue Exception
 	puts ""
 	puts $@.join( "\n" )
 	puts "</pre>"
+	puts "<div>#{' ' * 500}</div>"
 end
 
