@@ -1,6 +1,6 @@
 #!/usr/bin/env ruby
 #
-# update.rb $Revision: 1.19 $
+# update.rb $Revision: 1.20 $
 #
 # Copyright (C) 2001-2003, TADA Tadashi <sho@spc.gr.jp>
 # You can redistribute it and/or modify it under GPL2.
@@ -89,20 +89,17 @@ begin
 	
 rescue Exception
 	if @cgi then
-		if /MSIE/ =~ @cgi.user_agent then
-			print @cgi.header( 'type' => 'text/html' )
-		else
-			print @cgi.header( 'status' => '500 Internal Server Error', 'type' => 'text/html' )
-		end
+		print @cgi.header( 'status' => '500 Internal Server Error', 'type' => 'text/html' )
 	else
 		print "Status: 500 Internal Server Error\n"
-		print "Content-Type: text/plain\n\n"
+		print "Content-Type: text/html\n\n"
 	end
-	puts "<h1>500 Internal Server Error</h1>
+	puts "<h1>500 Internal Server Error</h1>"
 	puts "<pre>"
 	puts "#$! (#{$!.class})"
 	puts ""
 	puts $@.join( "\n" )
 	puts "</pre>"
+	puts "<div>#{' ' * 500}</div>"
 end
 
